Made the button generation into a function, and fixed a bug where calling this new function multiple times would cause multiple event listeners to attach to the same button. Also dynamically insert an hr element for readability

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ textarea {
     /* color: white; */
 }
 button {
-    padding: 10px;
+    /* padding: 10px; */
     font-size: 16px;
     cursor: pointer;
     margin-left: 5%;
@@ -47,7 +47,7 @@ button {
     padding-left: 5px;
 }
 .cpy {
-    padding: 10px;
+    /* padding: 10px; */
     font-size: 16px;
     cursor: pointer;
     margin-left: 1%;
